--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <button id="capture">写真を撮る</button>
         <canvas id="canvas" style="display:none;"></canvas>
     </div>
+     <div>
+        <label><span>背面カメラ</span>
+        <input type="file" capture="environment" accept="image/*"></label>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
