--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- ビューポートの幅がデバイスの画面幅と同じにし、initial-scaleは1.0なので拡大等はしない-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>証明写真</title>
-    <link rel="stylesheet" href="styles.css">
+   <!--<link rel="stylesheet" href="styles.css">-->
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,6 @@
         <label><span>背面カメラ</span>
         <input type="file" capture="environment" accept="image/*"></label>
     </div>
-    <script src="script.js"></script>
+  <!--  <script src="script.js"></script>-->
 </body>
 </html>
