--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
           <label><span>背面カメラ</span>
           <input type="file" capture="environment" accept="image/*"></label>
           </div>
+          <div>
+          <label><span>インカメラ</span>
+          <input type="file" capture="user" accept="image/*"></label>
+          </div>
+        </dd>
+        <dt>動画</dt>
+        <dd>
+          <div>
+          <label><span>背面カメラ</span>
+          <input type="file" capture="environment" accept="video/*"></label>
+          </div>
+          <div>
+          <label><span>インカメラ</span>
+          <input type="file" capture="user" accept="video/*"></label>
+          </div>
+        </dd>
+      </dl>
     <script src="script.js"></script>
 </body>
 </html>
