--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
         <dt>写真</dt>
         <dd>
           <div>
-          <label><span>背面カメラ</span>
-          <input type="file" capture="environment" accept="image/*"></label>
+            <label><span>背面カメラ</span>
+            <div class="overlay"></div>
+            <input type="file" capture="environment" accept="image/*"></label>
           </div>
           <div>
-          <label><span>インカメラ</span>
-          <input type="file" capture="user" accept="image/*"></label>
+            <label><span>インカメラ</span>
+            <input type="file" capture="user" accept="image/*"></label>
           </div>
         </dd>
         <dt>動画</dt>
         <dd>
           <div>
-          <label><span>背面カメラ</span>
-          <input type="file" capture="environment" accept="video/*"></label>
+            <label><span>背面カメラ</span>
+            <input type="file" capture="environment" accept="video/*"></label>
           </div>
           <div>
-          <label><span>インカメラ</span>
-          <input type="file" capture="user" accept="video/*"></label>
+            <label><span>インカメラ</span>
+            <input type="file" capture="user" accept="video/*"></label>
           </div>
         </dd>
       </dl>
