--- a/index.html
+++ b/index.html
@@ -1,38 +1,18 @@
 <!DOCTYPE html>
-<html lang="ja"><!--言語を日本語に指定-->
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- ビューポートの幅がデバイスの画面幅と同じにし、initial-scaleは1.0なので拡大等はしない-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>証明写真</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <dl>
-        <dt>写真</dt>
-        <dd>
-          <div>
-            <label><span>背面カメラ</span>
-            <div class="overlay"></div>
-            <input type="file" capture="environment" accept="image/*"></label>
-          </div>
-          <div>
-            <label><span>インカメラ</span>
-            <input type="file" capture="user" accept="image/*"></label>
-          </div>
-        </dd>
-        <dt>動画</dt>
-        <dd>
-          <div>
-            <label><span>背面カメラ</span>
-            <input type="file" capture="environment" accept="video/*"></label>
-          </div>
-          <div>
-            <label><span>インカメラ</span>
-            <input type="file" capture="user" accept="video/*"></label>
-          </div>
-        </dd>
-      </dl>
+    <div class="container">
+        <video id="video" autoplay></video>
+        <div class="overlay"></div>
+        <button id="capture">写真を撮る</button>
+        <canvas id="canvas" style="display:none;"></canvas>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
