--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <video id="video" autoplay></video>
+        <video muted autoplay playsinline id="video" class="huga"></video>
         <div class="overlay"></div>
         <button id="capture">写真を撮る</button>
         <canvas id="canvas" style="display:none;"></canvas>
