--- a/index.html
+++ b/index.html
@@ -3,16 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>証明写真</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>証明写真撮影</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
+        .container {
+            position: relative;
+            width: 300px;
+            height: 300px;
+            border: 5px solid #000;
+            overflow: hidden;
+            border-radius: 10px;
+        }
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .capture-button {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .capture-button:hover {
+            background-color: #0056b3;
+        }
+        canvas {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <video muted autoplay playsinline id="video" class="huga"></video>
-        <div class="overlay"></div>
-        <button id="capture">写真を撮る</button>
-        <canvas id="canvas" style="display:none;"></canvas>
+        <video id="video" autoplay></video>
+        <button class="capture-button" onclick="capturePhoto()">Capture</button>
+        <canvas id="canvas"></canvas>
     </div>
-    <script src="script.js"></script>
+    <script>
+        async function startCamera() {
+            const video = document.getElementById('video');
+            try {
+                const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+                video.srcObject = stream;
+            } catch (error) {
+                console.error('Error accessing camera: ', error);
+            }
+        }
+
+        function capturePhoto() {
+            const video = document.getElementById('video');
+            const canvas = document.getElementById('canvas');
+            const context = canvas.getContext('2d');
+
+            canvas.width = video.videoWidth;
+            canvas.height = video.videoHeight;
+
+            context.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+            // Convert canvas to data URL
+            const dataUrl = canvas.toDataURL('image/jpeg');
+
+            // Send the image to the server
+            uploadImage(dataUrl);
+        }
+
+        function uploadImage(dataUrl) {
+            const formData = new FormData();
+            formData.append('file', dataUrlToBlob(dataUrl), 'photo.jpg');
+
+            fetch('YOUR_SERVER_ENDPOINT', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                alert('Upload successful!');
+            })
+            .catch(error => {
+                console.error('Upload failed: ', error);
+            });
+        }
+
+        function dataUrlToBlob(dataUrl) {
+            const [header, data] = dataUrl.split(',');
+            const mime = header.match(/:(.*?);/)[1];
+            const bytes = atob(data);
+            const arrayBuffer = new ArrayBuffer(bytes.length);
+            const uint8Array = new Uint8Array(arrayBuffer);
+
+            for (let i = 0; i < bytes.length; i++) {
+                uint8Array[i] = bytes.charCodeAt(i);
+            }
+
+            return new Blob([uint8Array], { type: mime });
+        }
+
+        // Start the camera when the page loads
+        window.onload = startCamera;
+    </script>
 </body>
 </html>
