--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <video muted autoplay playsinline id="video" class="huga"></video>
         <div class="overlay"></div>
         <button id="capture">写真を撮る</button>
-        <canvas id="canvas" style="display:none;"></canvas>
+         <canvas id="canvas" width="30" height="180" style="display:none;"></canvas>
     </div>
     <script src="script.js"></script>
 </body>
