--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <video muted autoplay playsinline id="video" class="huga"></video>
         <div class="overlay"></div>
-        <button id="capture">写真を撮る</button>
+        <button id="capture">撮影</button>
          <canvas id="canvas" width="30" height="180" style="display:none;"></canvas>
     </div>
     <script src="script.js"></script>
